# parallel-file-encryptor

./: CMakeLists.txt  CryptoEngine.cpp  FileDiscoverer.cpp  FileDiscoverer.h  README.md  TaskQueue.cpp  TaskQueue.h  Worker.cpp  Worker.h  main.cpp
encrypted/: file2.txt.enc
include/: CryptoEngine.h  Task.h  TaskQueue.h  Worker.h
src/: CryptoEngine.cpp  FileDiscoverer.cpp  TaskQueue.cpp  Worker.cpp  main.cpp
testdir/: file1.txt.enc
